<resources>
    <string name="app_name">Comidas_M46</string>
    <string name="button_save">Save</string>
    <string name="mas">+</string>
    <string name="confirm_dialog_text">¿ESTÁS SEGURO?</string>
    <string name="confirm_no">NO</string>
    <string name="confirm_si">SI</string>
    <string name="pedidos">Pedidos</string>
    <string name="platos">Platos</string>
    <string name="now">NOW</string>
    <string name="order">ORDER</string>
    <string name="ordenar">ORDENAR</string>
    <string name="nombre">NOMBRE</string>
    <string name="categoria">CATEGORIA</string>
    <string name="ambas">AMBAS</string>
    <string name="volver">VOLVER</string>
    <string name="home">HOME</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="mis_platos">Mis platos</string>
    <string name="selecciona_categoria">Selecciona una categoria</string>
    <string name="telefono">Nª Telefono:</string>
    <string name="precio">Precio:</string>
    <string name="nombreCliente">Cliente:</string>
    <string name="recogida">Recogida:</string>
    <string name="racion">Ración:</string>
    <string name="cantidad">x</string>
    <string name="solicitado">Solicitado</string>
    <string name="preparado">Preparado</string>
    <string name="recogido">Recogido</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="editar">EDITAR</string>
    <string name="enviarWhatsapp">WHATSAPP</string>
    <string name="enviarSMS">SMS</string>
    <string name="guardar">GUARDAR</string>
    <string name="cliente">CLIENTE</string>
    <string name="fecha">FECHA</string>
    <string name="numTelefono">TELEFONO</string>
    <string name="add">AÑADIR</string>
    <string name="atras">ATRAS</string>
    <string name="sobrecarga">PRUEBAS DE SOBRECARGA</string>
    <string name="volumen">PRUEBAS DE VOLUMEN</string>
    <string name="unitarias">PRUEBAS UNITARIAS</string>



</resources>