<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.orders_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:visibility="visible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/mis_pedidos"
            android:textColor="#163172"
            android:textSize="38sp"
            android:textStyle=""/>

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button2"

            android:text="@string/home" />

        <Button
            android:id="@+id/buttonOrdenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button2"
            android:text="@string/mas" />

        <Button
            android:id="@+id/buttonMas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button2"
            android:text="@string/ordenar" />



        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/buttonOrdenar"
            android:id="@+id/radioGr"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioSolicitado"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/solicitado"
                android:textColor="#163172"
                android:textStyle="bold"
                android:padding="5dp"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioPreparado"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/preparado"
                android:textColor="#163172"
                android:textStyle="bold"
                android:padding="5dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioRecogido"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/recogido"
                android:textColor="#163172"
                android:textStyle="bold"
                android:padding="5dp"/>
        </RadioGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/radioGr"
            android:layout_marginTop="-10dp"
            android:padding="@dimen/big_padding"
            tools:listitem="@layout/recyclerview_pedido_item" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>