<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.orders_order">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:visibility="visible"
        tools:visibility="visible">

        <!-- Título -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/ordenar"
            android:textColor="#163172"
            android:textSize="38sp" />

        <!-- Botón Home -->
        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-50dp"
            android:background="@drawable/custom_button2"
            android:textColor="#FFF"
            android:text="@string/home" />



        <Button
            android:id="@+id/buttonVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-50dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_button2"
            android:textColor="#FFF"
            android:text="@string/volver" />


        <Button
            android:id="@+id/buttonCliente"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_button"
            android:text="@string/cliente"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <!-- Botón 2 -->
        <Button
            android:id="@+id/buttonTelefono"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonCliente"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_button"
            android:text="@string/numTelefono"
            android:textColor="#FFF"
            android:textSize="30sp" />

        <!-- Botón 3 -->
        <Button
            android:id="@+id/buttonFecha"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonTelefono"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_button"
            android:text="@string/fecha"
            android:textColor="#FFF"
            android:textSize="30sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>