<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/order"
            android:textColor="#163172"
            android:layout_marginStart="70dp"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textView2"
            android:layout_alignEnd="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-68dp"
            android:layout_marginEnd="-111dp"
            android:text="@string/now"
            android:textColor="#163172"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPlatos"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#163172"
            android:text="@string/platos"
            android:textColor="#FFF"
            android:textSize="34sp"
            app:iconTint="#163172" />

        <Button
            android:id="@+id/buttonPedidos"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPlatos"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#163172"
            android:text="@string/pedidos"
            android:textColor="#FFF"
            android:textSize="34sp"
            app:iconTint="#163172" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>