<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.confirmation">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:text="@string/confirm_dialog_text"
            android:textColor="#163172"
            android:textSize="40sp" />


        <Button
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView2"
            android:layout_marginStart="80dp"
            android:layout_marginTop="102dp"
            android:background="@drawable/custom_button"
            android:text="@string/confirm_no"
            android:textColor="#FFF"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/buttonNo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="285dp"
            android:layout_marginEnd="-143dp"
            android:background="@drawable/custom_button"
            android:text="@string/confirm_si"
            android:textColor="#FFF"
            android:textSize="34sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>