<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit_order">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F6F6F6"
        android:visibility="visible"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="41dp"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textViewNombreClientePedidoDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/editar"
            android:textColor="#163172"
            android:textSize="38sp" />


        <Button
            android:id="@+id/buttonAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewNombreClientePedidoDes"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="-50dp"
            android:background="@drawable/custom_button2"
            android:text="atras"
            android:textColor="#FFF" />

        <LinearLayout
            android:id="@+id/placeDes"
            android:layout_width="match_parent"
            android:layout_height="555dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/plato_info"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible"
            tools:visibility="visible">

            />

            <TextView
                android:id="@+id/textViewNombreCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#163172"
                android:textStyle="bold"
                android:text="Nombre del Cliente" />

            <EditText
            android:id="@+id/editTextNombreClienteEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Introduce el nombre"
            android:inputType="text"
            android:textSize="12sp"
            android:minHeight="35dp"
            android:minWidth="340dp"
            android:paddingLeft="10dp"
            android:background="#F6F6F6"


            />

            <TextView
                android:id="@+id/textViewPrecioPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#163172"
                android:textStyle="bold"
                android:text="Precio:" />
            <EditText
                android:id="@+id/editTextPrecioEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Introduce el precio"
                android:inputType="text"
                android:textSize="12sp"
                android:minHeight="35dp"
                android:minWidth="340dp"
                android:paddingLeft="10dp"
                android:background="#F6F6F6"


                />

            <TextView
                android:id="@+id/textViewTelefonoPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#163172"
                android:textStyle="bold"
                android:text="Teléfono:" />
            <EditText
                android:id="@+id/editTextTelefonoEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Introduce el telefono"
                android:inputType="text"
                android:textSize="12sp"
                android:minHeight="35dp"
                android:minWidth="340dp"
                android:paddingLeft="10dp"
                android:background="#F6F6F6"


                />
            <TextView
                android:id="@+id/textViewCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Categoría: "
                android:textSize="14sp"
                android:textColor="#163172"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/spinnerCategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/categorias"
                android:paddingLeft="10dp"
                android:textSize="18sp"

                android:minHeight="35dp"
                android:minWidth="340dp"
                android:prompt="@string/selecciona_categoria"
                android:spinnerMode="dropdown"
                />
            <TextView
                android:id="@+id/textViewFechaPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#163172"
                android:textStyle="bold"
                android:text="Fecha recogida:" />
            <!-- FECHA-->

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"

                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/in_time"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="-45dp"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SELECT DATE"
                android:id="@+id/btn_date"
                android:layout_alignBottom="@+id/in_date"
                android:layout_toRightOf="@+id/in_date"
                android:layout_toEndOf="@+id/in_date" />



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SELECT TIME"
                android:id="@+id/btn_time"
                android:layout_alignLeft="@+id/in_time"
                android:layout_alignStart="@+id/btn_date"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="-45dp"/>

            <!-- -->
            <View
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/dashed_line" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPlates"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                tools:listitem="@layout/recyclerview_edit_raciones"
                />
            <Button
                android:id="@+id/buttonAddRacion"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_below="@id/placeAdd"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="140dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custom_button2"
                android:text="+"
                android:textSize="20dp"
                />
        </LinearLayout>


        <Button
            android:id="@+id/buttonGuardarPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/placeDes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_button2"
            android:text="@string/guardar" />




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>